--- a/mobileFrontend/checklistFrontend/package.json
+++ b/mobileFrontend/checklistFrontend/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.4.0",
     "ngrok": "^5.0.0-beta.2",
     "react": "18.2.0",
-    "react-native": "0.72.3"
+    "react-native": "0.72.3",
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
